@@ -1,5 +1,9 @@
 2005-11-15  Vincent Noel <vincent.noel@gmail.com>
 
+	* main.c (main): Show a "busy" cursor while loading logs. 
+
+2005-11-15  Vincent Noel <vincent.noel@gmail.com>
+
 	* calendar.c: (calendar_class_finalize):
 	* loglist.c: (loglist_finalize):
 	* logview-findbar.c: (iter_is_visible), (logview_findbar_finalize):
